--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -1,17 +1,23 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Local Library Home</h1>
-  <p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em>!</p>
-  <h2>Dynamic content</h2>
-  <p>The library has the following record counts:</p>
-  <ul>
+<h1>Local Library Home</h1>
+<p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em>!</p>
+<h2>Dynamic content</h2>
+<p>The library has the following record counts:</p>
+<ul>
     <li><strong>Books:</strong> {{ num_books }}</li>
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
-
-  </ul>
+    {% if user.is_authenticated %}
+    <li>User: {{ user.get_username }}</li>
+  <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+    <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+    {% else %}
+    <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+    {% endif %}
+</ul>
 <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
 
 {% endblock %}
